@@ -1,3 +1,7 @@
+2008-11-06  Hans Boehm <Hans.Boehm@hp.com>
+	* doc/gcinterface.html: Improve REDIRECT_MALLOC documentation.
+	* include/gc.h (GC_register_my_thread): Improve comment.
+
 2008-11-04  Hans Boehm <Hans.Boehm@hp.com>
 	* Makefile.direct: Add comment for -DCHECKSUMS.
 
